# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Stef Smeets
author_email = s.smeets@esciencecenter.nl
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
description = FOCUS package including DLS-76 and KRIBER
keywords =
    focus
    zeolites
    structure-determination
    dls76
    kriber
    electron-diffraction-data
    powder-diffraction-data
long_description = file: readme.md
long_description_content_type = text/markdown
name = focus_package
project_urls =
    Bug Tracker = https://github.com/stefsmeets/focus_package/issues
    Documentation = https://github.com/stefsmeets/focus_package
url = https://github.com/stefsmeets/focus_package
version = 3.1.0


[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    importlib_resources; python_version<'3.10'


[options.package_data]
* = LICENCE, readme.md
focus_tools = *.py
resources = *
bin = *


[options.extras_require]
build =
    twine
    wheel
    build


[options.entry_points]
console_scripts =
    multifocal  = focus_tools.multifocal:main
    dls76       = focus_tools.pydls:dls76_entry
    kriber      = focus_tools.pykriber:kriber_entry
    strudat2cif = focus_tools.pykriber:strudat2cif_entry
    fo2hist     = focus_tools.focus_tools:fo2hist_entry
    fo2cif      = focus_tools.focus_tools:fo2cif_entry
    fo2strudat  = focus_tools.focus_tools:fo2strudat_entry
    dlsall      = focus_tools.focus_tools:dlsall_entry
    cdlsall     = focus_tools.focus_tools:cdlsall_entry

[flake8]
exclude = scripts
max-line-length = 96